--- a/example-notebook.qmd
+++ b/example-notebook.qmd
@@ -25,9 +25,11 @@ You can add options to executable code like this
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
-
+:onion:
 ```{r}
 library(tidyverse)
 
 mtcars |> ggplot(aes(cyl, mpg)) + geom_point()
+
+
 ```
